--- a/public/index.html
+++ b/public/index.html
@@ -182,6 +182,13 @@
             <div></div>
         </div>
     </div>
+    <div style="margin-top:10px">
+        <span> Github Repo:</span>
+        <br />
+        <span>
+            Note: Not every weekday is available. The API only provides open classrooms for the next two school days.
+        </span>
+    </div>
 </body>
 
 </html>
